// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> accepts external \`id\` value 1`] = `
<TextInput
  id="ID"
  inputClassName="datepicker"
/>
`;

exports[`<DatePicker /> renders 1`] = `
<TextInput
  id="DatePicker-mockId"
  inputClassName="datepicker"
/>
`;

exports[`<DatePicker /> renders with a label 1`] = `
<TextInput
  id="DatePicker-mockId"
  inputClassName="datepicker"
  label="DatePicker label"
/>
`;
